--- a/人性的弱点.md
+++ b/人性的弱点.md
@@ -1,1 +1,9 @@
-
+# 1.  处理人的基础技术
+- 如果你想吃蜂蜜，不要踢翻蜂箱
+  - 批评是徒劳的，它会让一个人处于防守状态，并为自己辩护（个人觉得上级对下级可能不是这样的）
+  - 鼓励比批评惩罚，让人学习的速度更快（但是社会不是这样的，人们经常面临着压迫，剥削，竞争。只能接受鼓励，不能接受批评，可能陷入比较大的内耗）
+    - 有些人会将不满的情绪写下来，但是不发出去，将他们放起来
+    - 人不是逻辑生物，是情绪化，有着偏见，骄傲，虚荣的生物
+    - 理解和宽容
+    - 胡佛同意机械师继续为他服务，我觉得很怪，不适合、粗心的人应该更换，再带来更大的后果之前，虽然很多时候要给人成长的空间
+    -  
